# dizzytea

./: .gitignore  Cargo.toml  README.md  codegen.ts  package-lock.json  package.json  schema.graphql  tsconfig.json  vite.config.ts
dizzytea/: package-lock.json  package.json
dizzytea/src/: App.vue
dizzytea/src-tauri/: Cargo.toml  tauri.conf.json
dizzytea/src-tauri/src/: data_types.rs  lib.rs
dizzytea/src-tauri/src/data_types/: audio.rs
dizzytea/src/views/: Component.vue  Entity.vue  Home.vue
src/: App.tsx  Music.tsx  introspection.json  main.rs
src-tauri/: Cargo.toml
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/context/: index.tsx
src/context/components/: SurrealProvider.tsx
src/context/components/GunProvider/: index.tsx
src/context/gun/: index.ts  types.ts
src/gql/: graphql.ts
