[package]
name = "dizzytea"
version = "0.1.0"
description = "A Tauri App"
authors = ["dizzyinez"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "dizzytea_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
#flecs_ecs = { version = "0.1.3", features = ["flecs_meta", "flecs_json"] }
flecs_ecs = { git = "https://github.com/Indra-db/Flecs-Rust", branch="main"}
assets_manager = { version = "0.12.4", features = ["utils", "image", "hot-reloading", "jpeg", "png", "webp"] }
symphonia-metadata = "0.5.4"
